; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp_curves.c_ecp_mod_p256.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ecp_curves.c_ecp_mod_p256.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NEXT = common dso_local global i32 0, align 4
@LAST = common dso_local global i32 0, align 4
@ret = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ecp_mod_p256 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecp_mod_p256(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @INIT(i32 256)
  %4 = call i32 @ADD(i32 8)
  %5 = call i32 @ADD(i32 9)
  %6 = call i32 @SUB(i32 11)
  %7 = call i32 @SUB(i32 12)
  %8 = call i32 @SUB(i32 13)
  %9 = call i32 @SUB(i32 14)
  %10 = load i32, i32* @NEXT, align 4
  %11 = call i32 @ADD(i32 9)
  %12 = call i32 @ADD(i32 10)
  %13 = call i32 @SUB(i32 12)
  %14 = call i32 @SUB(i32 13)
  %15 = call i32 @SUB(i32 14)
  %16 = call i32 @SUB(i32 15)
  %17 = load i32, i32* @NEXT, align 4
  %18 = call i32 @ADD(i32 10)
  %19 = call i32 @ADD(i32 11)
  %20 = call i32 @SUB(i32 13)
  %21 = call i32 @SUB(i32 14)
  %22 = call i32 @SUB(i32 15)
  %23 = load i32, i32* @NEXT, align 4
  %24 = call i32 @ADD(i32 11)
  %25 = call i32 @ADD(i32 11)
  %26 = call i32 @ADD(i32 12)
  %27 = call i32 @ADD(i32 12)
  %28 = call i32 @ADD(i32 13)
  %29 = call i32 @SUB(i32 15)
  %30 = call i32 @SUB(i32 8)
  %31 = call i32 @SUB(i32 9)
  %32 = load i32, i32* @NEXT, align 4
  %33 = call i32 @ADD(i32 12)
  %34 = call i32 @ADD(i32 12)
  %35 = call i32 @ADD(i32 13)
  %36 = call i32 @ADD(i32 13)
  %37 = call i32 @ADD(i32 14)
  %38 = call i32 @SUB(i32 9)
  %39 = call i32 @SUB(i32 10)
  %40 = load i32, i32* @NEXT, align 4
  %41 = call i32 @ADD(i32 13)
  %42 = call i32 @ADD(i32 13)
  %43 = call i32 @ADD(i32 14)
  %44 = call i32 @ADD(i32 14)
  %45 = call i32 @ADD(i32 15)
  %46 = call i32 @SUB(i32 10)
  %47 = call i32 @SUB(i32 11)
  %48 = load i32, i32* @NEXT, align 4
  %49 = call i32 @ADD(i32 14)
  %50 = call i32 @ADD(i32 14)
  %51 = call i32 @ADD(i32 15)
  %52 = call i32 @ADD(i32 15)
  %53 = call i32 @ADD(i32 14)
  %54 = call i32 @ADD(i32 13)
  %55 = call i32 @SUB(i32 8)
  %56 = call i32 @SUB(i32 9)
  %57 = load i32, i32* @NEXT, align 4
  %58 = call i32 @ADD(i32 15)
  %59 = call i32 @ADD(i32 15)
  %60 = call i32 @ADD(i32 15)
  %61 = call i32 @ADD(i32 8)
  %62 = call i32 @SUB(i32 10)
  %63 = call i32 @SUB(i32 11)
  %64 = call i32 @SUB(i32 12)
  %65 = call i32 @SUB(i32 13)
  %66 = load i32, i32* @LAST, align 4
  br label %67

67:                                               ; preds = %1
  %68 = load i32, i32* @ret, align 4
  ret i32 %68
}

declare dso_local i32 @INIT(i32) #1

declare dso_local i32 @ADD(i32) #1

declare dso_local i32 @SUB(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
